--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">Notes</string>
     <string name="note_title">Note Title</string>
+    <string name="search_hint">Search your notes</string>
+    <string name="search_title">Search</string>
+
+    <string name="menu_night_mode">Dark Mode</string>
+    <string name="day_mode">Light Mode</string>
+    <string name="about_dialog_title">About</string>
+    <string name="about_dialog_details">Developed by <b>Atri Tripathi</b>\n\nVersion: 1.0</string>
+    <string name="menu_about">About</string>
+    <string name="menu_share">Share</string>
 </resources>
