Clean-up for Github

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright 2019 Atri Tripathi. All rights reserved.
+  -->
+
 <resources>
     <string name="app_name">Notes</string>
     <string name="note_title">Note Title</string>
